# what-is-a-dinosaurs-favorite-form-of-compression-cpp-template

./: CMakeLists.txt  main.cpp
src/: huffman.cpp  huffman.hpp
tests/: huffman_test.cpp
